valor total inventario